--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,6 +29,7 @@ services:
       "DB_DATABASE": "${DB_DATABASE}"
       "DB_USERNAME": "${DB_USERNAME}"
       "DB_PASSWORD": "${DB_PASSWORD}"
+      "MAX_CONCURRENT_PROCESSES": 2
       "DEBUG": ${DB_DEBUG}
     ports:
       - "8080:8080"
