--- a/parser/requirements.txt
+++ b/parser/requirements.txt
@@ -13,8 +13,8 @@ h11==0.14.0
 idna==3.4
 multidict==6.0.2
 psycopg2-binary==2.9.3
-pydantic==1.10.2
-python-dotenv==0.21.0
+pydantic
+python-dotenv
 sniffio==1.3.0
 soupsieve==2.3.2.post1
 starlette==0.20.4
